packages/pkgcraft/pkgcraft-0.0.11.tar.gz/pkgcraft-0.0.11/testdata/repos/valid/bad/slot/none/none-8.ebuild
EAPI=8
DESCRIPTION="ebuild with no SLOT"
